compiler/example/error/github/raw.githubusercontent.com/WKLive/meister-example/3fb8b76d219a593d52b21f9964ab146436bd8c0e/modules/aegir/manifests/init.pp
class aegir {
  include aegir::master
  include aegir::slave
}
import "definitions/*"
